Updated version to 4.0.0

--- a/3.0_Release_Notes.md
+++ b/3.0_Release_Notes.md
@@ -1,4 +1,4 @@
-# Evernote SDK 3.0.1 Release Notes
+# Evernote SDK 3.0 Release Notes
 
 Evernote SDK 3.0 includes many improvements and changes. 
 
@@ -30,6 +30,6 @@ For the most part your code should still work when upgrading from the 2.0 versio
 
 If you are using Swift, you may have more work to do. The deprecated methods are not exposed to Swift, and several APIs have been renamed for Swift to better reflect the API naming guidelines in Swift 3.0.
 
-##Updating to 3.0.1
-Replacing UIWebView with WKWebView for better compatibility
+##Updating to 4.0.0
+Replacing UIWebView with WKWebView for better compatibility and AppStore Acceptance.
 
